versioned_docs/version-4.3.0/系统扩展指南/同步和使用自定义数据.md

import useBaseUrl from '@docusaurus/useBaseUrl';

### 在Postgres中使用

* 首先excel数据表需要是csv格式，如图：

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong1.png')} />

* 打开pgAdmin，选择使用此自定义数据的数据库→架构→public→表，右键选择新建，为表取一个名字

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong2.png')} />

* 为表新增列，名称与excel中相同，同时增加imgenius系统所必须的两列，id和ai_lastmodifiedon，增加完毕点击确定

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong3.png')} />

* 导入csv文件之前，先用记事本打开，另存，选择UTF-8，然后确定

  <img alt=" " src={useBaseUrl('docimg/自定义数据4101.png')} />

* 新建的表上右键，选择导入/导出，编码选择UTF8，有列头需要将标题改为“是”，分隔符选择“,”，点击确定即可

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong4.png')} />

  <img alt=" " src={useBaseUrl('docimg/自定义数据4102.png')} />

* 执行sql语句，更新id和ai_lastmodifiedon

```
UPDATE generic_code 
SET ai_lastmodifiedon =  '2022-05-11 15:54:04'

create extension "uuid-ossp" from generic_code

ALTER TABLE generic_code ALTER COLUMN id SET DATA TYPE UUID USING (uuid_generate_v4());

```

* 右键，查看/编辑数据，可以看到数据都已经在表里了

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong5.png')} />

* 在安装目录imgenius文件夹中新建SyncResource文件夹，在其中新建ExternalEntity.json文件，文件内容如下：

```
[
  {
    "No": 1,
    "Name": "Generic_Code",
    "Desc": "故障代码",
    "SchemaVersion": 201,
    "Schema": "ItemNumber TEXT,Description TEXT,State TEXT,Type TEXT"
  }
]
```

* 其中，Name为表名，Desc为终端同步此表时的显示名。

* 注意：当Schema也就是表中的列发生变化时，SchemaVersion也要随之变化，在原有值上+1。

* 在SDC中为使用此自定义数据的作业项填写可选项脚本：

```
var resultName = ScriptEngine.GetResultName();
var daAccess = new DAAccess();
var daExternalEntity = daAccess.GetExternalEntityDA('Generic_Code'); 
var sql = 'select ID,ItemNumber from Generic_Code where Type=\'故障代码\''; 
daExternalEntity.ExecuteSQL(sql,[],function (_isSuccess, _rows) 
 {
    var list = [];
    if (_isSuccess) {    
        if (_rows && _rows.length > 0) {
            for (var i = 0; i < _rows.length; i++) {
                var row = _rows[i];
                var obj = {'ID':row['ID'],'Name':row['ItemNumber']}
                list.push(obj); 
            }
        }
    }
    ScriptEngine[resultName] = list;
});

return {'ResultName':resultName};

```

* 之后，在终端上执行时，该作业项可选择的值就是type为故障代码的ItemNumber值了。

* 之后可以在该作业项的逻辑脚本条件中，填加下列脚本:

```
var resultName = ScriptEngine.GetResultName();
var value = @Me.Value;
ScriptEngine.Context.SetTaskGroupPropertyValue('故障', value);
if (value) {
    var daAccess = new DAAccess();
    var daExternalEntity = daAccess.GetExternalEntityDA('Generic_Code');
    var sql = 'select Description from Generic_Code where ItemNumber=\'' + value + '\'';
    daExternalEntity.ExecuteSQL(sql, [], function (_isSuccess, _rows) {
        if (_isSuccess && _rows && _rows.length > 0) {
            var reasonTask = _.find(ScriptEngine.Context.curTasks,function(_item){return _item['Name'] == '故障原因'});
            if(reasonTask){
            	ScriptEngine.Context.SetTaskAttributeValue(reasonTask.ID,'Value',_rows[0]['Description']);
            }
        }
        ScriptEngine[resultName] = '';
    });
}else{
	ScriptEngine[resultName] = '';
}

return { 'ResultName': resultName };

```

* 上面说到终端上执行时，该作业项可选择的值就是type为故障代码的ItemNumber值，而添加上此脚本，该作业项选完值后，会将ItemNumber值所对应的Description值自动填入"故障原因"作业项中，实现类似于自定义列表关联关系的功能。

### 在Sqlserver中使用

* 在Sqlserver中使用导入导出向导工具，将excel表导入到数据库中

  <img alt=" " src={useBaseUrl('docimg/zdyshujushiyong6.png')} />

* 之后同样手动新增ID和AI_LastModifiedOn这两列，并使用sql语句更新这两列

```
pdate [generic_code] set ID = NEWID()；   

update [generic_code] set AI_LastModifiedOn = getDate()

```

* 之后的配置与postgres一样即可。